--- a/app/package.json
+++ b/app/package.json
@@ -9,16 +9,20 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "@types/classnames": "^2.2.11",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.16",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "history": "^5.0.0",
     "node-sass": "^5.0.0",
     "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "typescript": "^4.1.3",
     "web-vitals": "^1.1.0"
